Update name to nahrae-jin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <link rel="shortcut icon" href="/assets/images/wipying-122x217.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/nahrae-122x217.png" type="image/x-icon">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,13 +48,13 @@
       <div class="navbar-brand" data-turbolinks="false">
                     <span class="navbar-logo">
                         <a href="/">
-                             <img src="/assets/images/wipying-122x217.png" class="rounded"
+                             <img src="/assets/images/nahrae-122x217.png" class="rounded"
                                   alt="Mobirise" title="" style="height: 3.8rem;">
                         </a>
                     </span>
         <span class="navbar-caption-wrap">
             <a class="navbar-caption text-white display-4" href="/">
-                            Wipying Jin's Porfolio</a></span>
+                            Nahrae Jin's Porfolio</a></span>
       </div>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -128,8 +128,8 @@
     <div class="media-container-row content text-white">
       <div class="col-12 col-md-3">
         <div class="media-wrap">
-          <a href="https://wipying-jin.herokuapp.com/">
-            <img src="/assets/images/wipying-122x217.png" alt="Mobirise" title="" class=" img-thumbnail">
+          <a href="https://nahrae-jin.herokuapp.com/">
+            <img src="/assets/images/nahrae-122x217.png" alt="Mobirise" title="" class=" img-thumbnail">
           </a>
         </div>
       </div>
@@ -150,7 +150,7 @@
         <h5 class="pb-3">
           Links
         </h5>
-        <p class="mbr-text"><a class="text-primary" href="https://wipying-jin.herokuapp.com">Portfolio Website</a><br><br>
+        <p class="mbr-text"><a class="text-primary" href="https://nahrae-jin.herokuapp.com">Portfolio Website</a><br><br>
         </p>
       </div>
     </div>
