--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,12 +35,12 @@
     <div class="media-container-row">
 
       <div class="mbr-figure" style="width: 40%;">
-        <img src="assets/images/wipying-736x1308.png" class="rounded img-thumbnail" alt="Mobirise" title="">
+        <img src="assets/images/nahrae-736x1308.png" class="rounded img-thumbnail" alt="Mobirise" title="">
       </div>
 
       <div class="media-content">
         <h1 class="mbr-section-title pb-3 align-left mbr-white mbr-fonts-style display-2">
-          Hi, I am Wipying Jin</h1>
+          Hi, I am Nahrae Jin</h1>
         <h3 class="mbr-section-subtitle align-left  mbr-light pb-3 mbr-white mbr-fonts-style display-5">
           <em>Full Stack Web Application Developer, Mobile Developer</em></h3>
         <div class="mbr-section-text  pb-3 ">
