--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                     <span class="navbar-logo">
                         <a href="/">
                              <img src="/assets/images/nahrae-122x217.png" class="rounded"
-                                  alt="Mobirise" title="" style="height: 3.8rem;">
+                                  alt="Nahrae" title="" style="height: 3.8rem;">
                         </a>
                     </span>
         <span class="navbar-caption-wrap">
@@ -129,7 +129,7 @@
       <div class="col-12 col-md-3">
         <div class="media-wrap">
           <a href="https://nahrae-jin.herokuapp.com/">
-            <img src="/assets/images/nahrae-122x217.png" alt="Mobirise" title="" class=" img-thumbnail">
+            <img src="/assets/images/nahrae-122x217.png" alt="Nahrae" title="" class=" img-thumbnail">
           </a>
         </div>
       </div>
