--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,7 +35,7 @@
     <div class="media-container-row">
 
       <div class="mbr-figure" style="width: 40%;">
-        <img src="assets/images/nahrae-736x1308.png" class="rounded img-thumbnail" alt="Mobirise" title="">
+        <img src="assets/images/nahrae-736x1308.png" class="rounded img-thumbnail" alt="Nahrae" title="">
       </div>
 
       <div class="media-content">
@@ -87,7 +87,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/safety-notice-2-492x321.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/safety-notice-2-492x321.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -104,7 +104,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/livirae-2-492x248.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/livirae-2-492x248.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box ">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -121,7 +121,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/lawdingo-4-492x238.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/lawdingo-4-492x238.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -137,7 +137,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/sign-video-uk-3-492x296.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/sign-video-uk-3-492x296.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -161,7 +161,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/pozzodi-3-492x227.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/pozzodi-3-492x227.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">Pozzo di Mastri</h4>
@@ -176,7 +176,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/small-office-search-4-492x362.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/small-office-search-4-492x362.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box ">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">Small Office Search</h4>
@@ -191,7 +191,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/venture-kamloops-4-492x251.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/venture-kamloops-4-492x251.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">Support for starting and growing your business</h4>
@@ -207,7 +207,7 @@
       <div class="card p-3 col-12 col-md-6 col-lg-3">
         <div class="card-wrapper">
           <div class="card-img">
-            <img src="assets/images/investments-6-492x360.png" class="img-thumbnail" alt="Mobirise" title="">
+            <img src="assets/images/investments-6-492x360.png" class="img-thumbnail" alt="Nahrae" title="">
           </div>
           <div class="card-box">
             <h4 class="card-title pb-3 mbr-fonts-style display-7">
