--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,14 +137,14 @@
         <h5 class="pb-3">
           Address
         </h5>
-        <p class="mbr-text">Chestnut Ridge, NY 10977<br>New York, United States</p>
+        <p class="mbr-text"></p>
       </div>
       <div class="col-12 col-md-3 mbr-fonts-style display-7">
         <h5 class="pb-3">
           Contacts
         </h5>
         <p class="mbr-text">
-          Email: ray.pride84@gmail.com&nbsp;<br><br></p>
+          Email: jeannahrae@gmail.com&nbsp;<br><br></p>
       </div>
       <div class="col-12 col-md-3 mbr-fonts-style display-7">
         <h5 class="pb-3">
